# Rename-Books

./: .gitignore  CLAUDE.md  DelDupFiles.py  LICENCE  Processor.py  README.md  README.ro.md  RemoveAlready done.py  RemoveErrors.py  RenameBooks.py  RenameByParentFolder .py  Split Batches.py  pyproject.toml  rmStartSpace.py
Diferantiate files/: main.py
benchmark/: ITERATIONS.md  bench.py  create_files.py  ground_truth.json  iterate.py  test_fallback.py
docs/: generate_screenshots.py
norma/: cli.py  config.py  dedup.py  pipeline.py  processor.py  prompt.py  tui.py
openspec/changes/norma-refactor/: design.md  proposal.md  tasks.md
