[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "norma"
version = "0.1.0"
description = "AI-powered universal file normalizer — any domain, any language, any format"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE" }
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "textual>=0.50.0",
]

[project.scripts]
norma = "norma.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["norma"]
